--- a/src/styles/projectPage.css
+++ b/src/styles/projectPage.css
@@ -6,6 +6,8 @@
 }
 
 .projectListBox {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   justify-content: left;
   background-color: yellow;
