--- a/src/styles/BiographyPage.css
+++ b/src/styles/BiographyPage.css
@@ -1,4 +1,4 @@
-.homepageContainer {
+.BiographyContainer {
   background-color: red;
   align-items: center;
   display: flex;
@@ -10,15 +10,6 @@
   justify-content: left;
   background-color: yellow;
   margin: 1%;
-  padding: 0% 3% 0% 3%;
-  border-radius: 5%;
-}
-
-.singleProjectCard {
-  width: 80%;
-  justify-content: left;
-  background-color: yellow;
-  margin: 5%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
 }
