--- a/src/styles/HeaderBar.css
+++ b/src/styles/HeaderBar.css
@@ -3,9 +3,21 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  margin: 2% 0% 2% 0%;
 }
 
 .contactDetails {
   display: flex;
   flex-direction: column;
+}
+
+.selfie {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.selfie img {
+  border-radius: 50%;
+  border: 2px solid;
 }
