--- a/src/styles/singleProjectCard.css
+++ b/src/styles/singleProjectCard.css
@@ -13,3 +13,10 @@
   padding: 2% 3% 2% 3%;
   border-radius: 5%;
 }
+
+/* For PC  */
+@media only screen and (min-width: 600px) {
+  .projectImage {
+    width: 30%;
+  }
+}
