--- a/src/styles/HeaderBar.css
+++ b/src/styles/HeaderBar.css
@@ -1,15 +1,22 @@
 .headerBarContainer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
   margin: 2% 0% 2% 0%;
+}
+
+.title {
+  width: 70%;
+  background-color: red;
 }
 
 .selfie {
   width: 30%;
   display: flex;
   flex-direction: column;
+  background-color: blue;
 }
 
 .selfie img {
