--- a/src/styles/contactDetails.css
+++ b/src/styles/contactDetails.css
@@ -1,8 +1,18 @@
 .linkContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .linkContainer ul {
   list-style: none;
+  align-items: right;
+}
+
+/* For PC  */
+@media only screen and (min-width: 600px) {
+  .linkContainer {
+    align-items: flex-end;
+    padding: 0% 2% 1% 0%;
+  }
 }
