--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -5,6 +5,13 @@
   flex-direction: column;
 }
 
+.innerContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .summaryBox {
   width: 80%;
   justify-content: left;
@@ -21,14 +28,15 @@
   margin: 5%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
+  word-wrap: break-word;
+}
+
+p {
 }
 
 /* For PC  */
 @media only screen and (min-width: 600px) {
-  .homepageContainer .innerContainer {
-    background-color: red;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .innerContainer {
+    background-color: blue;
   }
 }
