--- a/src/styles/singleProjectCard.css
+++ b/src/styles/singleProjectCard.css
@@ -1,22 +1,29 @@
-.projectCardContainer {
-  background-color: red;
-  align-items: center;
+.projectCard {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.singleProjectCard {
+.detailsAndImage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.imageOrVideo {
   width: 80%;
-  justify-content: left;
-  background-color: yellow;
-  margin: 5%;
-  padding: 2% 3% 2% 3%;
-  border-radius: 5%;
 }
 
 /* For PC  */
 @media only screen and (min-width: 600px) {
-  .projectImage {
+  .detailsAndImage {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .detailsAndImage .imageOrVideo {
     width: 30%;
+    justify-content: center;
   }
 }
