--- a/src/styles/HeaderBar.css
+++ b/src/styles/HeaderBar.css
@@ -4,19 +4,19 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  margin: 2% 0% 2% 0%;
+  margin: 0% 0% 0% 0%;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .title {
   width: 70%;
-  background-color: red;
 }
 
 .selfie {
-  width: 30%;
+  width: 25%;
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  padding: 1%;
 }
 
 .selfie img {
