--- a/src/styles/BiographyPage.css
+++ b/src/styles/BiographyPage.css
@@ -1,5 +1,4 @@
 .BiographyContainer {
-  background-color: red;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -8,8 +7,9 @@
 .summaryBox {
   width: 80%;
   justify-content: left;
-  background-color: yellow;
+  background-color: #bbd1f5aa;
   margin: 1%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
+  border: 1px solid;
 }
