--- a/src/styles/contactDetails.css
+++ b/src/styles/contactDetails.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #c8eeeecc;
+  width: 99%;
+  border: 1px solid;
 }
 
 .linkContainer ul {
@@ -12,7 +15,7 @@
 /* For PC  */
 @media only screen and (min-width: 600px) {
   .linkContainer {
-    align-items: flex-end;
+    align-items: center;
     padding: 0% 2% 1% 0%;
   }
 }
