--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,42 +1,43 @@
 .homepageContainer {
-  background-color: red;
   align-items: center;
   display: flex;
   flex-direction: column;
 }
 
-.innerContainer {
+.homepageContainer .innerContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.homepageContainer .summaryBox {
+  background-color: #bbd1f5aa;
+  /* background-color: rgba(188, 133, 244, alpha); */
+}
 
-.summaryBox {
+.homepageContainer .innerContainer .summaryBox {
   width: 80%;
+  background-color: #bbd1f5aa;
   justify-content: left;
-  background-color: yellow;
   margin: 1%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
 }
 
-.singleProjectCard {
+.homepageContainer .innerContainer .singleProjectCard {
   width: 80%;
   justify-content: left;
-  background-color: yellow;
+  background-color: #bbd1f5aa;
   margin: 5%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
   word-wrap: break-word;
 }
 
-p {
+.nextProjectButton {
+  margin: 1%;
 }
 
 /* For PC  */
 @media only screen and (min-width: 600px) {
-  .innerContainer {
-    background-color: blue;
-  }
 }
