--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,8 +6,7 @@
   justify-content: space-around;
   background-color: #fff;
   color: black;
-  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
-  padding: 1%;
+  /* box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23); */
   display: flex;
   flex-direction: row;
 }
@@ -15,12 +14,17 @@
 .navigation li {
   display: flex;
   flex-direction: row;
+  width: 33%;
 }
 
 .navigation li .navLink {
+  width: 100%;
 }
 
 .navigation li .navLink button {
   font-size: large;
   text-decoration: none;
+  width: 100%;
+  padding: 1% 0% 1% 0%;
+  background-color: aliceblue;
 }
