--- a/src/styles/singleProjectPage.css
+++ b/src/styles/singleProjectPage.css
@@ -1,5 +1,4 @@
 .projectCardContainer {
-  background-color: red;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -8,7 +7,9 @@
 .singleProjectCard {
   width: 80%;
   justify-content: left;
-  background-color: yellow;
+  background-color: #bbd1f5aa;
+  border: 1px solid;
+
   margin: 5%;
   padding: 2% 3% 2% 3%;
   border-radius: 5%;
@@ -27,6 +28,7 @@
 
 .imageOrVideo .projectImage {
   width: 100%;
+  border: 2px solid;
 }
 
 /* For PC  */
