--- a/src/styles/singleProjectPage.css
+++ b/src/styles/singleProjectPage.css
@@ -17,9 +17,14 @@
   flex-direction: column;
 }
 
+.details {
+  width: 70%;
+}
+
 .detailsAndImage {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .detailsAndImage .imageOrVideo {
@@ -33,18 +38,29 @@
 
 /* For PC  */
 @media only screen and (min-width: 600px) {
+  .projectCardContainer {
+  }
+
+  .singleProjectCard {
+  }
+
   .detailsAndImage {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  .details {
+    width: 60%;
+    margin: 0% 5% 0% 0%;
   }
 
   .detailsAndImage .imageOrVideo {
-    display: flex;
-    justify-content: center;
+    width: 50%;
   }
 
-  .detailsAndImage .imageOrVideo .projectImage {
-    width: 40%;
-    justify-content: flex-end;
+  .imageOrVideo .projectImage {
+    width: 60%;
+    border: 2px solid;
   }
 }
