tried to improve styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   width: 100%;
-  background-color: #dce0fc;
+  background-color: #6a508a;
   background-image: url(./images/coding-svgrepo-com.svg);
   background-repeat: repeat;
   background-size: 80px 80px;
