--- a/src/styles/BiographyPage.css
+++ b/src/styles/BiographyPage.css
@@ -4,10 +4,18 @@
   flex-direction: column;
 }
 
+.CVButton {
+  margin: 3% 0% 0% 0%;
+  min-width: 50px;
+  min-height: 50px;
+  border-radius: 50%;
+}
+
 .summaryBox {
   width: 80%;
   justify-content: left;
-  background-color: #bbd1f5aa;
+  background-color: #4c4066;
+  color: white;
   margin: 1%;
   padding: 0% 3% 0% 3%;
   border-radius: 5%;
