--- a/src/styles/contactDetails.css
+++ b/src/styles/contactDetails.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fcbb90;
+  background-color: #a86f9d;
   width: 100%;
   border: 1px solid;
   color: black;
