--- a/src/styles/contactDetails.css
+++ b/src/styles/contactDetails.css
@@ -5,7 +5,7 @@
   background-color: #a86f9d;
   width: 100%;
   border: 1px solid;
-  color: black;
+  color: white;
 }
 
 .linkContainer ul {
@@ -14,6 +14,7 @@
 }
 
 .linkContainer li a {
+  color: lime;
 }
 
 /* For PC  */
