included wordwrap for single project page

--- a/src/styles/singleProjectPage.css
+++ b/src/styles/singleProjectPage.css
@@ -41,6 +41,10 @@
   border: 2px solid;
 }
 
+.details h5 {
+  word-wrap: break-word;
+}
+
 /* For PC  */
 @media only screen and (min-width: 600px) {
   .projectCardContainer {
